Added the ability to export data

--- a/templates/new_page.html
+++ b/templates/new_page.html
@@ -38,9 +38,13 @@
 
 <hr>
 
-<!-- PLACEHOLDERS -->
+<!-- ----------------------------- -->
+<!-- Export -->
+<!-- ----------------------------- -->
 <h3>Export Session</h3>
-<button disabled>Export CSV (Coming Soon)</button>
+<form method="GET" action="/export/session" style="text-align:left;">
+    <button type="submit">Export CSV</button>
+</form>
 
 </body>
 </html>
